<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayoutMainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="#192841"
            android:elevation="12dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:title="Newsy"
                android:id="@id/toolbar"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:titleTextColor="@color/white"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                android:gravity="start|center"
                android:layout_marginTop="10dp"/>
            <SearchView
                android:id="@+id/searchView"
                android:goIcon="@drawable/ic_baseline_search_24"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:queryHint="Make a search"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_searchdesign"
                />

        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/ChipTabLayout"
            app:tabIndicatorColor="@color/white"
            app:tabSelectedTextColor="@color/white"
            android:layout_marginTop="20dp"
            app:tabTextColor="#000000"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/main_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="60dp"/>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="#192841"
        app:itemIconSize="30dp"
        app:itemIconTint="@color/white"
        app:menu="@menu/nav_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>


