<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/settings"
        android:title=""
        android:icon="@drawable/ic_baseline_settings_24"/>

    <item android:id="@+id/fav"
        android:title=""
        android:icon="@drawable/ic_favorite"/>

</menu>